--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Rock Paper Scissors</title>
   </head>
   <body>
-    <script type="text/javascript" src="script.js"></script>
+    <h2>Computer Choice: <span id="computer-choice"></span></h2>
+    <h2>Your Choice: <span id="user-choice"></span></h2>
+    <h2>Result: <span id="result"></span></h2>
+
+    <button type="button" name="button" id="rock">rock</button>
+    <button type="button" name="button" id="paper">paper</button>
+    <button type="button" name="button" id="scissors">scissors</button>
+
+    <script type="text/javascript" src="script.js" charset="utf-8"></script>
   </body>
 </html>
